remove old `team create` go-swagger stuff
